After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688378 - g_socket_join_multicast_group not working
g_socket_join_multicast_group not working
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.35.x
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-11-15 10:39 UTC by Wim Taymans
Modified: 2012-11-15 16:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed fix (1.13 KB, patch)
2012-11-15 10:40 UTC, Wim Taymans
committed Details | Review

Description Wim Taymans 2012-11-15 10:39:16 UTC
g_socket_join_multicast_group() and also g_socket_leave_multicast_group() don't work because the structure passed to setsockopt() is not properly cleared.

in g_socket_multicast_group_operation(), mc_req is passed to setsockopt but only the address and interface are set, the other field (imr_address) is left
to random values and causes setsockopt to randomly fail with ENODEV (No such device).
Comment 1 Wim Taymans 2012-11-15 10:40:41 UTC
Created attachment 229036 [details] [review]
proposed fix
Comment 2 Wim Taymans 2012-11-15 15:58:59 UTC
In case you want me to commit, I don't have commit access to gnome..
Comment 3 Dan Winship 2012-11-15 16:10:55 UTC
ah, ok, pushed. thanks for the patch